--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(CircularPriorityQueue)
 set(CMAKE_CXX_STANDARD 17)
 SET(CMAKE_CXX_FLAGS -pthread)
 
-find_package(Boost 1.58.0 COMPONENTS filesystem REQUIRED)
+find_package(Boost 1.65.1 COMPONENTS filesystem REQUIRED)
 if (Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
-    add_executable(Mutiqueues main.cpp)
-    target_link_libraries(Mutiqueues ${Boost_LIBRARIES})
+    add_executable(CircularPriorityQueue main.cpp)
+    target_link_libraries(CircularPriorityQueue ${Boost_LIBRARIES})
 endif ()
 
-add_executable(CircularPriorityQueue main.cpp CircularPriorityQueue.h)
+#add_executable(CircularPriorityQueue main.cpp CircularPriorityQueue.h)
