dynamic throughput array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
 project(CircularPriorityQueue)
 
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif ()
+
 set(CMAKE_CXX_STANDARD 17)
 SET(CMAKE_CXX_FLAGS -pthread)
+set(CMAKE_CXX_FLAGS_RELEASE -O3)
 
 find_package(Boost 1.58.0 COMPONENTS filesystem REQUIRED)
 
